--- a/.gitmodules
+++ b/.gitmodules
@@ -55,3 +55,6 @@
 [submodule "vimfiles/bundle/vimproc.vim"]
 	path = vimfiles/bundle/vimproc.vim
 	url = https://github.com/Shougo/vimproc.vim.git
+[submodule "vimfiles/bundle/vim-gradle"]
+	path = vimfiles/bundle/vim-gradle
+	url = https://github.com/tfnico/vim-gradle.git
