--- a/.gitmodules
+++ b/.gitmodules
@@ -64,3 +64,6 @@
 [submodule "vimfiles/bundle/vim-easy-align"]
 	path = vimfiles/bundle/vim-easy-align
 	url = https://github.com/junegunn/vim-easy-align.git
+[submodule "vimfiles/bundle/vim-easygrep"]
+	path = vimfiles/bundle/vim-easygrep
+	url = https://github.com/dkprice/vim-easygrep.git
