--- a/.gitmodules
+++ b/.gitmodules
@@ -67,3 +67,6 @@
 [submodule "vimfiles/bundle/vim-easygrep"]
 	path = vimfiles/bundle/vim-easygrep
 	url = https://github.com/dkprice/vim-easygrep.git
+[submodule "vimfiles/bundle/vim-go"]
+	path = vimfiles/bundle/vim-go
+	url = https://github.com/fatih/vim-go.git
