--- a/.gitmodules
+++ b/.gitmodules
@@ -70,3 +70,6 @@
 [submodule "vimfiles/bundle/vim-go"]
 	path = vimfiles/bundle/vim-go
 	url = https://github.com/fatih/vim-go.git
+[submodule "vimfiles/bundle/vim-logutils"]
+	path = vimfiles/bundle/vim-logutils
+	url = https://github.com/DuckOfDoom/vim-logutils.git
