--- a/Code/User/settings.json
+++ b/Code/User/settings.json
@@ -1,12 +1,18 @@
-{ "terminal.external.windowsExec": "C:\\Git\\bin\\sh.exe",
+{
+    "[haskell]" :{
+        "editor.insertSpaces": true,
+        "editor.tabSize" : 2,
+        "editor.autoIndent": true,
+    },
+    "stylishHaskell.showConsoleOnError": false,
+
+    // This does not work =(
+    "terminal.external.windowsExec": "C:\\Git\\bin\\sh.exe",
 
     "vim.useCtrlKeys": false,
     "vim.leader": ",",
 
     "vim.normalModeKeyBindings" : [
-        {
-            "before": [ "p", ], "after": [ "p", "g", "v", "y" ]
-        },
         {
             "before": [ "J" ],
             "commands": [ "workbench.action.previousEditor" ]
@@ -14,6 +20,10 @@
         {
             "before": [ "K" ],
             "commands": [ "workbench.action.nextEditor" ]
+        },
+        {
+            "before": [ "<leader>", "g"],
+            "commands": [ "workbench.view.scm" ]
         },
         {
             "before": [ "<leader>", "b", "c" ],
@@ -49,5 +59,5 @@
             "when": "editorTextFocus"
         }
     ],
-    "files.autoSave": "afterDelay"
+    "files.autoSave": "off"
 }
