--- a/Code/User/settings.json
+++ b/Code/User/settings.json
@@ -1,9 +1,13 @@
 {
+    "workbench.editor.enablePreview": false,
+    "workbench.editor.enablePreviewFromQuickOpen": false,
+
     "[haskell]" :{
         "editor.insertSpaces": true,
         "editor.tabSize" : 2,
         "editor.autoIndent": true,
     },
+
     "stylishHaskell.showConsoleOnError": false,
 
     // This does not work =(
