--- a/.ideavimrc
+++ b/.ideavimrc
@@ -5,7 +5,7 @@ let g:mapleader = ","
 
 set ignorecase
 
-imap jk <ESC>
+map jk <ESC>
 map <leader>vrc :so ~/.ideavimrc<CR>
 
 map <leader>su :action SurroundWith<CR>
