--- a/.ideavimrc
+++ b/.ideavimrc
@@ -5,8 +5,8 @@ let g:mapleader = ","
 
 set ignorecase
 
-imap jk <ESC>
-vmap jk <ESC>
+imap kj <ESC>
+vmap kj <ESC>
 
 map <leader>vrc :so ~/.ideavimrc<CR>
 
